--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -3,9 +3,32 @@
         
         transform: scale(1.3);
         transition-duration: 0.5s;
+        
 
     
     
     
 }
+
+
+/* .navbar{
+        position: sticky;
+        top :0;
+} */
+
+.navbar{
+        background-color: #e66465;
+        color : rgb(255, 255, 255)
+}
+
+#sticky {
+        position: sticky;
+        top: 0;
+        width: 100%;
+        z-index: 1;
+        
+      }
+
+
+
 
