--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,20 +1,14 @@
+
+/*using selectors to change the appearance of the webpage   */
 .navbar-brand:hover{
     
         
         transform: scale(1.3);
         transition-duration: 0.5s;
-        
-
-    
-    
-    
-}
+        }
 
 
-/* .navbar{
-        position: sticky;
-        top :0;
-} */
+
 
 .navbar{
         background-color: #e66465;
